Closes Issue #14246: _elementtree parser will now handle io.StringIO